fix: keep upload command builder Java 17 compatible